# rpassword

./: .drone.yml  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  appveyor.yml  shell.nix
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: rpassword-rust-tests.yml  rust.yaml  tests.yml
examples/: discard_input_output.rs  discard_output.rs  example.rs  feedback_password.rs  prompt_password.rs  prompt_password_with_config.rs  prompt_with_config.rs  read-password-bufread.rs  read-password-stdinlock.rs  read-password-tty.rs  read-password.rs  read_password.rs  read_password_with_config.rs  tests.rs
src/: config.rs  feedback.rs  lib.rs  rpassword.rs  rutil.rs  unix.rs  utf8.rs  wasm.rs  windows.rs  zero_on_drop.rs
src/rpassword/: all.rs
src/rutil/: atty.rs  fix_line_issues.rs  fix_new_line.rs  lib.rs  print_tty.rs  safe_string.rs  safe_string_serde.rs  stdin_is_tty.rs
tests/: no-terminal.rs  password  piped.rs  results_pipe_expected_stderr  results_pipe_expected_stdout  results_pipe_missing_nl_expected_stderr  results_pipe_missing_nl_expected_stdout  tests-unix.sh
