[package]
name = "rpassword"
version = "5.0.1"
authors = ["Conrad Kleinespel <conradk@conradk.com>"]
description = "Read passwords in console applications."
license = "Apache-2.0"
homepage = "https://github.com/conradkleinespel/rpassword"
repository = "https://github.com/conradkleinespel/rpassword"
documentation = "https://docs.rs/rpassword/"
readme = "README.md"
keywords = ["read", "password", "security", "pass", "getpass"]
edition = "2018"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["std", "winnt", "fileapi", "processenv", "winbase", "handleapi", "consoleapi", "minwindef", "wincon"] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"